# mpi-projects

./: README.md
FD1D/: Makefile  (+4 more)
FD2D/: CMakeLists.txt  clean  config.sh  deepclean.sh  fd2d_compressible_flow.cpp  fd2d_euler.cpp  fd2d_heat.cpp  fd2d_heat_advection.cpp  fd2d_transport.cpp  fd2d_wave.cpp  gcc_config.sh  mpiconfig.conf
FD2D/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
FD2D/FD2D.build/Debug/ALL_BUILD.build/: Script-7CC01263B06C404980373334.sh  dgph
FD2D/FD2D.build/Debug/Wave2D.build/: dgph
FD2D/FD2D.build/Debug/ZERO_CHECK.build/: Script-43B408DFFAB14E29B068B37E.sh  dgph
FD2D/boundaryConditions/: CMakeLists.txt  Makefile  boundaryCondition.h  boundaryConditions.h  cmake_install.cmake  convectiveCooling.cpp  convectiveCooling.h  dirchletBoundaryCondition.cpp  dirchletBoundaryCondition.h  neumannBoundaryCondition.cpp  neumannBoundaryCondition.h
FD2D/boundaryConditions/CMakeScripts/: boundaryConditions_postBuildPhase.makeRelease
FD2D/fddatamanager/: CMakeLists.txt  DataManager.h  FDDataManager.cpp  FDDataManager.h
FD2D/fdgrid/: CMakeLists.txt  LocalGrid.cpp  LocalGrid.h  Makefile  cmake_install.cmake  communicatorMap.cpp  communicatorMap.h
FD2D/fdmodels/: CMakeLists.txt  FDCompressibleEuler.cpp  FDCompressibleEuler.h  FDCompressibleFlow.cpp  FDCompressibleFlow.h  FDHeatTransfer.cpp  FDHeatTransfer.h  FDModel.cpp  FDModel.h  FDTransport.cpp  FDTransport.h  Makefile  cmake_install.cmake
FD2D/fdsources/: BaseSource.h  ConstantSource.h  GaussianSource.h  Radialsource.h  physicalSources.h
FD2D/fdutils/: CMakeLists.txt  Makefile  cmake_install.cmake  fdUtils.cpp  fdUtils.h
FD2D/plotting/: FD1D_plotter.m  FD1Dfnc.m  FD2D_ParPlot.m  FD2D_plot.m  FD2Dfnc.m  GridPartitionPlot.m  GridPartitionPlotFnc.m  README  plotGrid.m  plotGridPart.m
random_walk/: CMakeLists.txt  random_walk.cpp  xcode_config.sh
random_walk/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
random_walk/randomnumbers/: CMakeLists.txt  Makefile  cmake_install.cmake
random_walk/randomwalk.build/Debug/ALL_BUILD.build/: Script-F5E8963ABA80480F854E2CDB.sh  dgph
random_walk/randomwalk.build/Debug/RandomWalk.build/: dgph
random_walk/randomwalk.build/Debug/ZERO_CHECK.build/: dgph  (+1 more)
(+69 files in other folders)
